--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ramanpreet Kaur </title>
 </head>
-<body>
+<body> 
     <h1>Ramanpreet Kaur</h1>
-<img src="" alt="">
+    <img src="images/my picture.jpg" alt="">
+ <ul>  <li> Student number 041126700</li>
+    <li>Program Interactive Media Design </li>
+    <li>Web Development 2 MTM6201</li>
+    <li> Intersting fact about me is i always like to being clicked </li>
+</ul> 
+    
 </body>
 </html>
